--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Responsive Layouts</title>
-  <meta name="description" content="This site will serve as the hub for many sub responsive layouts">
+  <title>Fender x Paramore</title>
+  <meta name="description" content="A responsive submission page to apply for a giveaway">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -13,18 +13,89 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/x-icon" href="./img/electric-guitar.svg">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="https://use.typekit.net/bvb2srz.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.typekit.net/bvb2srz.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+
 <body>
-  <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
+  <div class="yellow-pig-main-wrapper">
+    <header class="yellow-pig-header">
+      <img class="yellow-pig-logo" src="./img/icon fenderxpara-04.png" alt="Fender and Paramore Sweepstakes">
+      <nav>
+      <div id="myLinks">
+        <a href="./index.html">Home</a>
+        <a href="./rules.html">Rules</a>
+        <a href="https://store.paramore.net/" target="_blank">Shop Paramore &nbsp<i class="fa fa-external-link"></i></a>
+        <a href="https://www.fender.com/en-US/start" target="_blank">Shop Fender &nbsp<i class="fa fa-external-link"></i></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+        </div>
+      </nav>
+    </header>
+
+
+    <main class="yellow-pig-main">
+
+      <center><img class="night-red-logo" src="./img/Fender_Musical_Instruments_Corporation-Logo.wine.png" alt="Fender Musical Instruments Corporation Logo">presents...</center><br><br>
+
+      <center><h1>"THIS IS WHY!" Tour Sweepstakes</h1></center>
+      <!-- featured section -->
+      <h2 class="l-hidden">Featured Items</h2>
+      <div class="yellow-pig-feature-items">
+        <!-- first section -->
+        <div class="yellow-pig-feature-item">
+          <img src="./img/feature-09.png" alt="Paramore performing in the Lake City Arena">
+          <center><h3>2 TICKETS TO A CONCERT NEAR YOU</h3></center>
+          </div>
+
+        <!-- second section -->
+        <div class="yellow-pig-feature-item">
+          <img src="./img/feature-10.png" alt="Paramore Clothing Merchandise"><br>
+          <br><center><h3>MERCH BUNDLE</h3></center>
+        </div>
+
+        <!-- third section -->
+        <div class="yellow-pig-feature-item">
+          <img src="./img/feature-11.png" alt="Collection of Fender guitars">
+          <center><h3>THE GUITAR OF YOUR DREAMS</h3></center>
+        </div>
+
+      </div>
+      <!-- my contact form section -->
+      <form action="./awesome.html">
+       <center> <h3>"THIS IS WHY!" Tour</h3></center>
+        <p>Sweepstakes Entry Form</p>
+        <label class="l-hidden" for="fname">First name:</label><br>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+        <label for="email">email:</label><br>
+        <input type="text" id="email" name="email" value="" placeholder="Email"><br>
+        <label for="zipcode">Zip Code:</label><br>
+        <input type="text" id="Zipcode" name="zipcode" placeholder="Zip Code"><br><br>
+        <p>
+          <input class="my-second-button" type="submit" value="Submit">
+        </p>
+      </form>  
+      
+    </main>
+    <footer class="yellow-pig-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
+      <h4>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
+    </div>
+  <!-- top of fake layout for about page -->
+
   <script src="js/main.js"></script>
 </body>
 
