--- a/rules.html
+++ b/rules.html
@@ -54,11 +54,11 @@
 <p>By entering this sweepstakes, you agree to these official rules. For any questions or concerns, please contact, customerservice@fendercorp.com.</p>
 
       
-    </main>
-    <footer class="yellow-pig-footer"> <center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt=""></center>
-    <h6>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
-  </div>
-  <script src="js/main.js"></script>
-</body>
+</main>
+<footer class="yellow-pig-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
+  <h4>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
+</div>
 
+<script src="js/main.js"></script>
+</body>
 </html>
