--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 
 
 <body>
-  <div class="yellow-pig-main-wrapper">
-    <header class="yellow-pig-header">
-      <img class="yellow-pig-logo" src="./img/icon fenderxpara-04.png" alt="Fender and Paramore Sweepstakes">
+  <div class="night-purple-main-wrapper">
+    <header class="night-purple-header">
+      <img class="night-purple-logo" src="./img/icon fenderxpara-04.png" alt="Fender and Paramore Sweepstakes">
       <nav>
       <div id="myLinks">
         <a href="./index.html">Home</a>
         <a href="./rules.html">Rules</a>
         <a href="https://store.paramore.net/" target="_blank">Shop Paramore &nbsp<i class="fa fa-external-link"></i></a>
         <a href="https://www.fender.com/en-US/start" target="_blank">Shop Fender &nbsp<i class="fa fa-external-link"></i></a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction(any)">
           <i class="fa fa-bars"></i>
         </a>
         </div>
@@ -45,32 +45,33 @@
     </header>
 
 
-    <main class="yellow-pig-main">
+    <main class="night-purple-main">
 
       <center><img class="night-red-logo" src="./img/Fender_Musical_Instruments_Corporation-Logo.wine.png" alt="Fender Musical Instruments Corporation Logo">presents...</center><br><br>
 
       <center><h1>"THIS IS WHY!" Tour Sweepstakes</h1></center>
       <!-- featured section -->
       <h2 class="l-hidden">Featured Items</h2>
-      <div class="yellow-pig-feature-items">
+      <div class="night-purple-feature-items">
         <!-- first section -->
-        <div class="yellow-pig-feature-item">
+        <div class="night-purple-feature-item">
           <img src="./img/feature-09.png" alt="Paramore performing in the Lake City Arena">
           <center><h3>2 TICKETS TO A CONCERT NEAR YOU</h3></center>
           </div>
 
         <!-- second section -->
-        <div class="yellow-pig-feature-item">
+        <div class="night-purple-feature-item">
           <img src="./img/feature-10.png" alt="Paramore Clothing Merchandise"><br>
           <br><center><h3>MERCH BUNDLE</h3></center>
         </div>
 
         <!-- third section -->
-        <div class="yellow-pig-feature-item">
+        <div class="night-purple-feature-item">
           <img src="./img/feature-11.png" alt="Collection of Fender guitars">
           <center><h3>THE GUITAR OF YOUR DREAMS</h3></center>
         </div>
 
+        
       </div>
       <!-- my contact form section -->
       <form action="./awesome.html">
@@ -78,23 +79,23 @@
         <p>Sweepstakes Entry Form</p>
         <label class="l-hidden" for="fname">First name:</label><br>
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
+        <input type="text" id="fname" name="fname"placeholder="First Name"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" placeholder="Last name"><br>
-        <label for="email">email:</label><br>
-        <input type="text" id="email" name="email" value="" placeholder="Email"><br>
-        <label for="zipcode">Zip Code:</label><br>
+        <label id="email" for="email">Email:</label><br>
+        <input type="text" id="email" name="email"placeholder="Email"><br>
+        <label id="Zipcode" for="zipcode">Zip Code:</label><br>
         <input type="text" id="Zipcode" name="zipcode" placeholder="Zip Code"><br><br>
+        <label id="searchLabel" for="search">
         <p>
           <input class="my-second-button" type="submit" value="Submit">
         </p>
       </form>  
       
     </main>
-    <footer class="yellow-pig-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
+    <footer class="night-purple-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
       <h4>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
     </div>
-  <!-- top of fake layout for about page -->
 
   <script src="js/main.js"></script>
 </body>
