--- a/rules.html
+++ b/rules.html
@@ -27,9 +27,9 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <div class="yellow-pig-main-wrapper">
-    <header class="yellow-pig-header">
-      <img class="yellow-pig-logo" src="./img/icon fenderxpara-04.png" alt="">
+  <div class="night-purple-main-wrapper">
+    <header class="night-purple-header">
+      <img class="night-purple-logo" src="./img/icon fenderxpara-04.png" alt="">
       <nav>
         <a href="./index.html">Home</a>
         <a href="./rules.html">Rules</a>
@@ -37,8 +37,9 @@
         <a href="https://www.fender.com/en-US/start" target="_blank">Shop Fender &nbsp<i class="fa fa-external-link"></i></a>
       </nav>
     </header>
+    
   
-    <main class="yellow-pig-main">
+    <main class="night-purple-main">
 <h1><center>**Sweepstakes Official Rules:**</center></h1>
 <ol>
   <h5><li><strong>**Eligibility:**</strong> Open to legal residents of the United States who are at least 18 years of age at the time of entry.<br>Void where prohibited.</li>
@@ -55,7 +56,7 @@
 
       
 </main>
-<footer class="yellow-pig-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
+<footer class="night-purple-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
   <h4>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
 </div>
 
