--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
         <p>Sweepstakes Entry Form</p>
         <label class="l-hidden" for="fname">First name:</label><br>
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"placeholder="First Name"><br>
+        <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" placeholder="Last name"><br>
-        <label id="email" for="email">Email:</label><br>
-        <input type="text" id="email" name="email"placeholder="Email"><br>
-        <label id="Zipcode" for="zipcode">Zip Code:</label><br>
+        <label for="email">Email:</label><br>
+        <input type="text" id="email" name="email" value="" placeholder="Email"><br>
+        <label for="zipcode">Zip Code:</label><br>
         <input type="text" id="Zipcode" name="zipcode" placeholder="Zip Code"><br><br>
-        <label id="searchLabel" for="search">
         <p>
           <input class="my-second-button" type="submit" value="Submit">
         </p>
