review/update form labels

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
       <!-- my contact form section -->
       <form action="./awesome.html">
        <center> <h3>"THIS IS WHY!" Tour</h3></center>
-        <p>Sweepstakes Entry Form</p>
-        <label class="l-hidden" for="fname">First name:</label><br>
-        <label for="fname">First name:</label><br>
+        <center><h5>Sweepstakes Entry Form</h5></center>
+        <br>
+        <p>First name:</p>
         <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
-        <label for="lname">Last name:</label><br>
+        <p>Last name:</p>
         <input type="text" id="lname" name="lname" placeholder="Last name"><br>
-        <label for="email">Email:</label><br>
+        <p>Email:</p>
         <input type="text" id="email" name="email" value="" placeholder="Email"><br>
-        <label for="zipcode">Zip Code:</label><br>
+        <p>Zipcode:</p>
         <input type="text" id="Zipcode" name="zipcode" placeholder="Zip Code"><br><br>
         <p>
           <input class="my-second-button" type="submit" value="Submit">
