updates rules footer

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           <img src="./img/feature-11.png" alt="Collection of Fender guitars">
           <center><h3>THE GUITAR OF YOUR DREAMS</h3></center>
         </div>
+<br>
+        <p><b>Get ready</b> to rock out with our ultimate Paramore fan sweepstakes! Enter for your chance to win an unforgettable experience – 2 tickets to a Paramore concert of your choice, a fantastic bundle of exclusive Paramore merchandise to show your love, and a sleek Fender guitar to take your music journey to the next level. Don't miss out on this electrifying opportunity to make your Paramore dreams come true. Enter now for your chance to win and let the music take you on a thrilling adventure!</p>
 
-        
       </div>
       <!-- my contact form section -->
       <form action="./awesome.html">
        <center> <h3>"THIS IS WHY!" Tour</h3></center>
-        <center><h5>Sweepstakes Entry Form</h5></center>
-        <br>
+        <center><h4>Sweepstakes Entry Form</h4></center>
         <p>First name:</p>
         <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
         <p>Last name:</p>
@@ -93,7 +93,7 @@
       
     </main>
     <footer class="night-purple-footer"><center><img class="night-blue-logo" src="./img/icon fenderxpara-05.png" alt="fender musical instrument corporation logo"></center>
-      <h4>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h6></footer>
+      <h5>Open to legal residents of the United States who are 18 years of age or older at the time of entry. Void where prohibited. The sweepstakes begins on October 2nd, 2023 at 12:00 AM and ends on November 4th, 2023 at 11:59 PM CST.  Winners will be selected at random from all eligible entries. Odds of winning depend on the number of entries received.</h5></footer>
     </div>
 
   <script src="js/main.js"></script>
