--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
        <center> <h3>"THIS IS WHY!" Tour</h3></center>
         <center><h4>Sweepstakes Entry Form</h4></center>
         <p>First name:</p>
-        <input type="text" id="fname" name="fname" value="" placeholder="First Name"><br>
+        <input type="text" id="fname" name="fname" value="fname" placeholder="First Name"><br>
         <p>Last name:</p>
         <input type="text" id="lname" name="lname" placeholder="Last name"><br>
         <p>Email:</p>
-        <input type="text" id="email" name="email" value="" placeholder="Email"><br>
+        <input type="text" id="email" name="email" value="email" placeholder="Email"><br>
         <p>Zipcode:</p>
         <input type="text" id="Zipcode" name="zipcode" placeholder="Zip Code"><br><br>
         <p>
